--- a/models/staging/jaffle_shop/src_jaffle_shop.yml
+++ b/models/staging/jaffle_shop/src_jaffle_shop.yml
@@ -1,9 +1,29 @@
 version: 2
 
-sources: 
+sources:
   - name: jaffle_shop
+    description: A clone of a Postgres application database.
     database: raw
     schema: jaffle_shop
     tables:
-     - name: customers
-     - name: orders   
+      - name: customers
+        description: Raw customers data.
+        columns:
+          - name: id
+            description: Primary key for customers data.
+            tests:
+              - unique
+              - not_null
+            
+      - name: orders
+        description: Raw orders data.
+        columns:
+          - name: id
+            description: Primary key for oders data.
+            tests:
+              - unique              
+              - not_null
+        loaded_at_field: _etl_loaded_at
+        freshness:
+          warn_after: {count: 12, period: hour}
+          error_after: {count: 24, period: hour}
