--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -39,5 +39,6 @@ models:
     staging:
       +materialized: view
 
-snowflake_spend:
-  enabled: true
+models:
+  snowflake_spend:
+    +enabled: true
